src/objects/Academic_Term__c.object
<CustomObject>
    <fields>
        <fullName>Activate_Application_Date__c</fullName>
        <inlineHelpText>Date in which applications for this term open.</inlineHelpText>
        <label>Activate Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>IF( 
Activate_Application_Date__c &lt;=  TODAY() &amp;&amp; End_Application_Date__c  &gt;=  TODAY(), &quot;Active&quot;, &quot;Inactive&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Active&quot; if applications for this term are currently open. &quot;Inactive&quot; otherwise.</inlineHelpText>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <description>Degree type(s) this record applies to (applies to all if blank)</description>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Application_Date__c</fullName>
        <inlineHelpText>Date in which applications for this term close.</inlineHelpText>
        <label>End Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type this record applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/college this record applies to (applies to all if blank)</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <formula>Term__r.Term_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Description__c</fullName>
        <description>Used for some formulas and automations.</description>
        <label>Term Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <inlineHelpText>End date for this term.</inlineHelpText>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <inlineHelpText>Start date for this term.</inlineHelpText>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Status__c</fullName>
        <formula>IF( 
Term_Start_Date__c &lt;= TODAY() &amp;&amp; Term_End_Date__c &gt;= TODAY(), &quot;Active&quot;, &quot;Inactive&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Active&quot; if this term is currently in session. &quot;Inactive&quot; otherwise.</inlineHelpText>
        <label>Term Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The HEDA Term record that maps to this Academic Term</description>
        <inlineHelpText>The HEDA Term record that maps to this Academic Term</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Academic Terms</relationshipLabel>
        <relationshipName>Academic_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Academic Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <columns>Term_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Terms</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Term_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Terms</label>
    </listViews>
    <listViews>
        <fullName>CAPS_GS_Active_Terms</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- CAPS/GS</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <label>CAPS/GS - Active Terms</label>
    </listViews>
    <listViews>
        <fullName>CAS_Active_Terms</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- CAS</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <label>CAS - Active Terms</label>
    </listViews>
    <listViews>
        <fullName>CAS_All_Terms</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- CAS</value>
        </filters>
        <label>CAS - All Terms</label>
    </listViews>
    <listViews>
        <fullName>SEM_Active_Terms</fullName>
        <columns>NAME</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>Term_Start_Date__c</columns>
        <columns>Term_End_Date__c</columns>
        <columns>Term_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>- SEM</value>
        </filters>
        <filters>
            <field>Application_Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <label>SEM - Active Terms</label>
    </listViews>
    <nameField>
        <label>Academic Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Academic Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>